// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormInput /> renders compact 1`] = `
<input
  className="input_1st4d84-o_O-input_compact_19gkl4s"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> renders important 1`] = `
<input
  className="input_1st4d84-o_O-input_important_7iy6bw"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> renders select compact 1`] = `
<select
  className="input_1st4d84-o_O-input_compact_19gkl4s-o_O-select_173na0f-o_O-select_compact_1lll1pq"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> sets hidden 1`] = `
<input
  className="input_1st4d84-o_O-input_hidden_i17vo6"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> supports prefixes 1`] = `
<input
  className="input_1st4d84-o_O-input_hasPrefix_omi9gr"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> supports suffixes 1`] = `
<input
  className="input_1st4d84-o_O-input_hasSuffix_1mimzu3"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;
